Fix tab deselect notifications.

Fix the post notification for tab deselection to send from the proper
object and include the userInfo.

BUG=705826
TEST=no visible changes.

Review-Url: https://codereview.chromium.org/2788233002
Cr-Commit-Position: refs/heads/master@{#461426}

Former-commit-id: 71e3604b522136b8fe4226941b67b72f56c7d921