ios/chrome/browser/tabs/tab_model_selected_tab_observer.mm
@@ -45,7 +45,8 @@
     @autoreleasepool {
       [[NSNotificationCenter defaultCenter]
           postNotificationName:kTabModelTabDeselectedNotification
-                        object:@{kTabModelTabKey : oldTab}];
+                        object:_tabModel
+                      userInfo:@{kTabModelTabKey : oldTab}];
     }
   }
 
